src/resources/ext_ldap/ldap-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ldap
  labels:
    app: ldap
spec:
  selector:
    matchLabels:
      app: ldap
  replicas: 1
  serviceName: ldap
  template:
    metadata:
      labels:
        app: ldap
    spec:
      containers:
        - name: ldap
          image: osixia/openldap:1.5.0
          ports:
            - containerPort: 389
              name: openldap
            - containerPort: 636
              name: openldapssl
          volumeMounts:
            - name: ldap-data
              mountPath: /var/lib/ldap
            - name: ldap-config
              mountPath: /etc/ldap/slapd.d
            - name: ldap-certs
              mountPath: /container/service/slapd/assets/certs
  volumeClaimTemplates:
  - metadata:
      name: ldap-data
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 100Mi
  - metadata:
      name: ldap-config
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 100Mi
  - metadata:
      name: ldap-certs
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 20Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ldap
  name: ldap-0
spec:
  ports:
    - protocol: TCP 
      name: ldap
      port: 389
      targetPort: 389
    - protocol: TCP 
      name: ldapssl
      port: 636
      targetPort: 636
  selector:
    app: ldap
  type: LoadBalancer
