src/resources/ext_ldap/ldap-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ldap-allow-internal-traffic
spec:
  podSelector:
    matchLabels:
      app: ldap
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: eric-sec-access-mgmt
